# FortiChain-Server

./: .dockerignore  .env.example  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  Readme.md  build.sh  docker-compose.yml  package-lock.json  package.json  server.js  test-api.http
.sqlx/: query-065775eed418be50a65681072d9ecf6cbe356950d8ee7d042b6f32a3f8d19ed3.json  query-0845ac5d255254c91e04430040457542d6250bf8959627902b45ab01d0cc21b9.json  query-0bb0231e736130986aec30c392f11ee00069df894349e17e394a1f792375577e.json  query-0e2ea43ced660ca1a3a45542ae41b7559ef1c583f389af6002ded803bb1c84f4.json  query-11aa9c9cfe5c77fcb19baf0c6d41d656796e4d72978756c3794a80a193daaf42.json  query-1e7ec3d2bd91859378ceb731a1f063db9799907a1c29abe8258dc8f6d991e749.json  query-1f870e16873ababc69e3b2e5e4bbd6bccd4edb58f94e2869830a62b0a17ef95d.json  query-2f90270710ce491e62fc2d03d6730910175f4ff5b7da46abd057b0c1a997d6d6.json  query-39cda5c2a9b4261360201416ec13e3ffee58972f23cae31b3955505c74c7ddee.json  query-48830c12fec186883495535f2beae4ebf5ea33b7f6c9c99db8588ff79d8af0bc.json  query-48f35d90b9ecd0e1de90d52902684739bdb30b175048dd6791bc0c225abbf809.json  query-4d9c26ba7a741292b958a39414857c635403eaf7209be35f62f04ef486f1a26a.json  query-4e60ad3a5b1fe1311ae56f2a5d5ce8b324d21b05a0629845dbfdf3b62bfeb638.json  query-4f9c576746775796dfa426620e8e22620f9f73ae26f1192de8118434f14cefb9.json  query-5f2ff0456eb826c144c6ac177f58dbff54eb70f7eae9fa898b28b99253956610.json  query-623317aa926d53805d2fa57a917b821a6f15140381e35f94734f28d89dd94329.json  query-75e917a33b9aeaabc020d9d5767d4fbb912cc7ea9be9d750bb5cfe25d6150abc.json  query-900f50b9fdbdb54ed5d09227041097cd3bb7e3c3227a4130dc5273cb3999ace1.json  query-a3c69d25c5a427fef36c315816cc06036f62368bb37c119105544e7cc1335656.json  query-a7d6d502e1e28d6200c10fd82d7a11dc4d8a4935ef9fafee4a099f106d1a6b5a.json  query-a8a5b81e2c20a14559fa02b35e84e95fec72098b8d8d5d09091e9f11810b406b.json  query-aa9b1faa2d0b2133e85a5e7e3ed5c1706a411d3f847ef1b46df53ea6957f651e.json  query-ac2d739d5641c7a937f4b8a68a35c2cbec4706f1723268e8b2c6dbe5d367871d.json  query-b6c9a65110b90a4b0caf2a29e4adbc45a014a58e205e7e63b424bb4da4adb470.json  query-b97518e10373ead2df0a7f561d52f8a055163c12d039e271a952bb024bb3758a.json  query-c6f50c4e3f85a194b37b4213514a30c98f90f74cc8d6a70dc29d299b1e6365c8.json  query-cfbcf2a97493a43be69a43da254ebf928f26b7a6763c7a09d379f3f125bec29f.json  query-d2a025435b3487d2891896c80d129280502796be032f3b795931d4499c7b0423.json  query-d6a5c82291c9c90d0b16ef2eb12c102b4d207f4d5bcd9d6d3c5e7ee8a1a2c3a2.json  query-d928006be2e4b33668b606cfb4cf4f509ef347b5de3fd1540594439de2a22807.json  query-dd220f05c4526998c187238cd905b4e60efb7f99fe9471fe650ca06b0d03a618.json  query-e5beae84945488d05739bbde3b81dbcc34b4a8f88c11c5342b96ac24bf36dbd5.json  query-e6ba6a80b7d4037e32c79789d8f1acf1b458d7b0ce77aece70f33e2260ead6ba.json  query-ebae98f6efb5f300d4bd1f8f076fc5937329ed5f85f0b1c0eaed11becb3a8d6d.json  query-f90de51df9f3e40be8dc965bc68944a55d7ab955f3e280d2be09a5261da91d7d.json  query-fb220aab617e5124dc39f715ea7f2671502b67a4b6746fc320d3387e929326e5.json
config/: config.js  db.config.js  roles.js
controllers/: helpRequest.controller.js  notification.controller.js  payout.controller.js  payoutController.js  profile.controller.js  project.controller.js  report.controller.js  support.controller.js  tips.controller.js  transactionController.js  transactionHistory.controller.js  user.controller.js  validatorRanking.controller.js  wallet.controller.js
docs/: logging.md
middleware/: validators.js
middlewares/: auth.js  (+7 more)
(+164 files in other folders)
