[package]
name = "fortichain-server"
version = "0.1.0"
edition = "2024"
publish = false
authors = [
    "Ebube Onuora onuoraebube44@gmail.com",
    "Abraham Ujah <abeeujah@gmail.com>",
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "fortichain_server"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.15.11"
dotenvy = "0.15.7"
num-traits = "0.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["request-id", "trace"] }
uuid = { version = "1.17.0", features = ["v4", "v7", "serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "bigdecimal", "chrono", "uuid"] }
thiserror = "1.0"
log = "0.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
rand = "0.9.1"

[dev-dependencies]
chrono = { version = "0.4", features = ["serde"] }
