[package]
name = "fortichain-server"
version = "0.1.0"
edition = "2024"
publish = false
authors = [
    "Ebube Onuora onuoraebube44@gmail.com",
    "Abraham Ujah <abeeujah@gmail.com>",
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "fortichain_server"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.15.11"
dotenvy = "0.15.7"
num-traits = "0.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tower = "0.5.2"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "bigdecimal",
    "chrono",
    "uuid",
] }
thiserror = "1.0"
log = "0.4"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
tower-http = { version = "0.6.1", features = ["trace", "timeout", "request-id", "cors", "normalize-path"] }
uuid = { version = "1.17", features = ["serde", "v7"] }
hyper = "1.6.0"
hex = "0.4"
rand = "0.9.1"
